--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,6 @@ body {
 }
 
 .hero-section .trending-box-top{
- border: 2px solid #fff;
  position: absolute;
  right: 15%;
  width: 400px;
@@ -447,7 +446,7 @@ body {
     left: -6px;
     transform: rotate(15deg);
     width: 2px;
-    height: 100%;
+    height: 16px;
 }
 
 .trending-footer span:nth-child(1):after{
@@ -1026,10 +1025,12 @@ section.insta-post-section{
 }
 
 .ratting-col{
-    width: 100%;
-    overflow: hidden;
+    /* width: 100%;
+    overflow: hidden; */
     margin-bottom: 30px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .ratting-info h6 a{
@@ -1040,13 +1041,15 @@ section.insta-post-section{
 }
 
 .ratting-info{
-    width: 80%;
-    float: right;
+    /* width: 80%;
+    float: right; */
+    flex-basis: 77%;
 }
 
 .subscribe-row p{
     color: var(--white-color);
     font-size: 14px;
+    font-family: var(--montserrat-family);
 }
 
 .subscribe-row .section-title {
@@ -1119,7 +1122,7 @@ section.insta-post-section{
 }
 .footer-row .footer-col{
     flex-basis: 33.33%;
-    padding: 0 15px;
+    padding: 15px 15px;
 }
 .footer-row .footer-col .footer-logo{
     width: 60%;
@@ -1131,6 +1134,7 @@ section.insta-post-section{
 
 .footer-row .f-col-1 p{
     margin: 20px 0 30px;
+    font-family: var(--montserrat-family);
 }
 
 .footer-col ul.social-links li{
@@ -1167,13 +1171,10 @@ section.insta-post-section{
     transform: skewX(-15deg);
 }
 
-.footer-bottom{
-				max-width: 540px;
+.btm-footer{
     text-align: center;
     background-color: var(--dk-red-color);
-    transform: skewX(-15deg);
-    font-weight: 700;
     padding: 10px 0;
-    font-family: var(--montserrat-family);
+    font-family: monospace;
 }
 /*==============End Of Footer Section Design================*/
